# aws-cost-explorer

./: .gitignore  README.md  deploy  pyproject.toml
src/: awscost.py  doit.py  pyproject.toml
src/aws_cost_explorer/: awscost.py
src/aws_cost_explorer/localutils/: aws_response.py  date_utils.py  json_utils.py  str_utils.py
src/localutils/: foo_utils
test/localutils/: test_aws_response.py  test_date_utils.py  test_json_utils.py
tests/aws_cost_explorer/localutils/: test_aws_response.py  test_date_utils.py  test_json_utils.py
