[tool.poetry]
name = "aws-cost-explorer"
version = "0.1.0"
description = "Simple cli to get aws billing data"
authors = ["Alan Berezin <alan.berezin1.gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.111"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
