[tool.poetry]
name = "aws-cost-explorer"
version = "0.1.0"
description = "Simple cli to get aws billing data"
authors = ["Alan Berezin <alan.berezin1.gmail.com>"]
readme = "README.md"

# packages = [ { include = "aws_cost_explorer" } ]

include = ["tests/*", "README.md"]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.111"
typer = "^0.12.3"

[tool.poetry.scripts]
aws-cost-explorer = 'aws_cost_explorer.awscost:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
