[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alan Berezin <alan.berezin1.gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.112"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
